<resources>
    <string name="app_name">Evaluaciones</string>
    <string name="login_name">Iniciar Sesion</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- LOGIN MENU -->
    <string name="strIngresarCib">Iniciar Sesion con un correo Institucional</string>
    <string name="strIngresarFb">Iniciar Sesión con una cuenta de Facebook</string>
    <!-- LOGIN DIALOG ALERT -->
    <string name="strInfoText">Necesitas tener una cuenta creada para iniciar sesión en la aplicación</string>
    <string name="strCrear">Crear Cuenta</string>
    <string name="strUsuario">Usuario</string>
    <string name="strPassword">Contraseña</string>
    <string name="strRecordarCheck">Recordarme</string>
    <string name="strOlvidarPwd">¿Olvidaste tu contraseña?</string>
    <string name="strIngresar">Iniciar Sesion</string>
    <string name="strBienvenido">Bienvenido</string>
    <string name="strUsuarioLogin">Usuario</string>
    <string name="strPerfilLogin">Perfil</string>
    <string name="strAceptar">Aceptar</string>

    <!--MAIN MENU-->
    <string name="title_activity_main">Menú Principal</string>
    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>
    <string name="action_settings">Configuración</string>

</resources>
