<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_dwn"
            android:title="Importar Cursos" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_up"
            android:title="Exportar Notas" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_menu_pend"
            android:title="Listar Pendientes" />
    </group>

    <item android:title="Ajustes">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
