<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:padding="3dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo_cibertec"
            android:adjustViewBounds="false"
            android:layout_width="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical"
            android:padding="3dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                tools:text="@string/strUsuarioLogin"
                android:text="@string/strUsuarioLogin"
                android:gravity="center_vertical"
                android:fontFamily="serif"
                android:textStyle="normal|bold"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/txtPerfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                tools:text="@string/strPerfilLogin"
                android:text="@string/strPerfilLogin"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="textStart" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAceptarLogin"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        tools:text="@string/strAceptar"
        android:text="@string/strAceptar"
        android:textColor="@android:color/white" />

</LinearLayout>